2007-04-24  Vlad Seryakov  <seryakov@users.sf.net>

        * include/ns.h: Changed NS_SOCK_DROP to NS_SOCK_DONE, drop
        flag was never used anywhere
        * nsd/task.c: Added call when task is done with NS_SOCK_DONE for any
        actions required for proper task completion
        * nsd/sockcallback.c: Updated with new NS_SOCK_DONE flag

2007-04-19  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nscp/nscp.c: (GetLine) Changed size_t variable to int
	as size_t is unsigned on Windows and this makes troubles.

	* nsd/tclcallbacks.c: (Ns_TclEvalCallback) Added debug
	logging of the callback that is about to run.

2007-04-04  Vlad Seryakov  <seryakov@users.sf.net>

        * nsd/driver.c: Changed WriterThread to use poll
        instead of active pushing, this made it faster and code
        more simpler

2007-03-17  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tclhttp.c: Updated to properly handle binary results in
	ns_http wait command

2007-03-24  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* include/Makefile.module.in:
	* nsperm/Makefile: Silence mkdir call during installation.

	* Makefile: Separated build-doc from the install target.
	Doc building has nothing to do with the installation.
	It must be performed as a separate step prior making
	the distribution file.
	Removed check for "dtplite" as this is now mandatory
	for build-doc target.

2007-03-23  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsthread/winthread.c: Removed home-brewn mutex code
	in favour of Windows CriticalSection.

2007-03-17  Vlad Seryakov  <seryakov@users.sf.net>

	* Makefile: make sure to copy .css files as well when
	installing .html docs

2007-03-17  Vlad Seryakov  <seryakov@users.sf.net>

        * include/nsthread.h:
        * include/ns.h:
        * nsd/nsd.h:
        * nsd/log/c:
        * nslog/nslog.c: Added O_LARGEFILE flag to open calls in
        logging modules, that will allow to support files > 2Gb. If that